[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repose"
version = "1.0.0"
description = "Repose OS — Hermes Agent Operations Framework"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "redis>=4.5",
    "bitwarden-sdk>=1.0",
    "feedparser>=6.0",
]

[project.scripts]
repose = "repose.cli:main"

[tool.setuptools.packages.find]
include = ["repose*"]

[tool.pytest.ini_options]
testpaths = ["utils"]
python_files = ["test_*.py"]
